# mt940-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
benches/: large-statement.rs  parse.rs
proptest-regressions/: lib.txt  sanitizers.txt  tag_parsers.txt
scripts/: Pipfile  bench-mt940-WolpH.py  update_test_output.sh
scripts/node/: index.js  package.json  run_bench.sh
scripts/python/: run_bench.sh
src/: errors.rs  lib.rs  mt940.pest  sanitizers.rs  tag_parsers.rs  transaction_types.rs  utils.rs
tests/: integration_test.rs  integration_tests_mt940.rs
tests/data/: MT940_DK_Example.txt  MT940_FI_Example.txt  MT940_SE_Example.txt
tests/data/mt940/full/abnamro/: mt940.json  mt940.sta
tests/data/mt940/full/betterplace/: sepa_mt9401.json  sepa_mt9401.sta  sepa_snippet.json  with_binary_character.json
tests/data/mt940/full/bugs/: issue-51.json  issue-51.sta
tests/data/mt940/full/cmxl/: mt940_1.json  mt940_1.sta  mt940_2.json  mt940_2.sta
tests/data/mt940/full/danskebank/: MT940_DK_Example.json  MT940_FI_Example.json  MT940_FI_Example.sta  MT940_NO_Example.json  MT940_SE_Example.json
tests/data/mt940/full/jejik/: abnamro.json  abnamro.sta  ing.json  knab.json  postfinance.json  rabobank-iban.json  sns.json
tests/data/mt940/full/mBank/: mt940.json  with_newline_in_tnr.json
tests/data/mt940/full/sparkasse/: buxtehude.json  buxtehude.sta
tests/data/mt940/special-cases/: overly_long_details.sta  unexpected_tag.sta  unknown_tag.sta
tests/data/mt942/full/mBank/: mt942.sta
tests/data/self-provided/: MT940_DK_Example.sta  MT940_NO_Example.sta
