[package]
name = "mt940"
description = "A strict MT940 bank statement parser"
version = "0.3.1"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/mt940-rs"
license = "MIT"
readme = "README.md"
keywords = ["mt940", "sepa", "banking", "fints", "hbci"]
categories = ["parser-implementations", "command-line-utilities", "command-line-interface"]
edition = "2018"

[badges]
travis-ci = { repository = "svenstaro/mt940-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true

[profile.bench]
lto = true

[dependencies]
clap = "2"
chrono = { version = "0.4", features = ["serde"] }
deunicode = "0.4"
rust_decimal = { version = "0.10", features = ["serde"] }
failure = "0.1"
log = "0.4"
pest = "2"
pest_derive = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.11"
strum_macros = "0.11"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
pretty_assertions = "0.5"
rstest = "0.2"
skeptic = "0.13"
proptest = "0.8.7"
regex = "1"
