[package]
name = "mt940"
description = "A strict MT940 bank statement parser"
version = "0.3.2"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/mt940-rs"
license = "MIT"
readme = "README.md"
keywords = ["mt940", "sepa", "banking", "fints", "hbci"]
categories = ["parser-implementations", "command-line-utilities", "command-line-interface"]
edition = "2018"

[badges]
travis-ci = { repository = "svenstaro/mt940-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true

[profile.bench]
lto = true

[dependencies]
clap = "2"
chrono = { version = "0.4", features = ["serde"] }
deunicode = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }
failure = "0.1"
log = "0.4"
pest = "2"
pest_derive = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.16"
strum_macros = "0.16"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
pretty_assertions = "0.6"
rstest = "0.5"
skeptic = "0.13"
proptest = "0.9.0"
regex = "1"
