[package]
name = "mt940"
description = "A strict MT940 bank statement parser"
version = "0.3.2"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/mt940-rs"
license = "MIT"
readme = "README.md"
keywords = ["mt940", "sepa", "banking", "fints", "hbci"]
categories = ["parser-implementations", "command-line-utilities", "command-line-interface"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[dependencies]
clap = "2"
chrono = { version = "0.4", features = ["serde"] }
deunicode = "1.0"
rust_decimal = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
log = "0.4"
pest = "2"
pest_derive = "2"
serde = "1"
serde_derive = "1"
serde_json = "1"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
pretty_assertions = "0.7"
rstest = "0.11"
doc-comment = "0.3"
proptest = "1.0.0"
regex = "1"
